--- a/datos.html
+++ b/datos.html
@@ -29,9 +29,10 @@
     </header>
     
     <main>
-        <h2>Estudios </h2>
-        <p>secundario completo:Instituto NORLAND, bachillerato en ciencias naturales.</p>
-        <p>cursos en EDUCACION IT sobre HTML y CSS</p>
+        <h2>Datos personales</h2>
+        <p>domicilio:juan b justo 1770,lanus este </p>
+        <p>emial:tomasmarzio@gmail.com</p>
+    </main>
     <footer>
         <p>Alumno TEC. en sistemas <a href="https://www.webcampus.uade.edu.ar/" target="_blank">UADE</a></p>
         <p class="contacto">
