--- a/experiencia.html
+++ b/experiencia.html
@@ -29,9 +29,11 @@
     </header>
     
     <main>
-        <h2>Estudios </h2>
-        <p>secundario completo:Instituto NORLAND, bachillerato en ciencias naturales.</p>
-        <p>cursos en EDUCACION IT sobre HTML y CSS</p>
+    <h2>Experiencia laboral</h2>
+    <p>2018-2020. estacion de servicio Shell,9 de Julio y Lujan Lanus ESTE. Actividad despachante de combustible/vendedor.</p>
+    <br>
+    <p>2021-actualidad. Panaderia "El Colegio",cordoba 843 Gerli, actividad:vendedor.</p>
+   </main>
     <footer>
         <p>Alumno TEC. en sistemas <a href="https://www.webcampus.uade.edu.ar/" target="_blank">UADE</a></p>
         <p class="contacto">
