--- a/index.html
+++ b/index.html
@@ -1,43 +1,47 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>curriculum </title>
-    <link rel="stylesheet" href="estilos.css">
+    <title>Curriculum Vitae</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-    <h1 id="encabezado">Tomas Elian Marzio</h1>
-    <h2 id="t" >ingresa a webcampus</h2>
-    <img src="img/images.jpg" alt="foto tomas"class= "imagen">
-    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quisquam repellat magnam vel velit, omnis,
-        dicta explicabo rerum debitis doloribus voluptas nam, facilis sint doloremque error saepe cum quis molestiae.
-    </P>
-    <p>hola que tal
-    </p>
-
-<p id="parrafo">
-    lalalalalallala</p>
-    <ul>
-
-        <a href="exp.html">
-            <li id="parrafo">experiencia laboral</li>
-        </a>
-        <a href="comp.html">
-            <li>competencias</li>
-        </a>
-        <a href="index.html">
-            <li>datos personales</li>
-        </a>
-        <a href="estudios.html">
-            <li>estudios</li>
-        </a>
-
-    </ul>
-
-
+    <header>
+        <h1>Tomas Elian Marzio</h1>
+        <div class="header-content">
+            <img src="img/fotoperfil.jpg" alt="foto" class="foto">
+            <div class="header-text">
+                <h2>Skills</h2>
+                <p>Python básico</p>
+                <p>HTML/CSS/JAVASCRIPT</p>
+                <p>INGLÉS, first certificate/B2 CAMBRIDGE ENGLISH</p>
+            </div>
+        </div>
+        <nav>
+            <ul id="nav">
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="experiencia.html">Experiencia Laboral</a></li>
+                <li><a href="estudios.html">Estudios</a></li>
+                <li><a href="datos.html">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+    
+    <main>
+        <h2>Un poco sobre mi</h2>
+        <p>Me encuentro cursando la Tecnicatura en desarrollo web en la universidad de UADE.</p>
+        <br>
+        <p>Estoy buscando un lugar que me brinde oportunidades de crecimiento,en donde pueda poner mis conocimineto en practica</p>
+        <br>
+        <p>Me considero una persona con mucha curiosidad y deseo de aprender, siempre estoy predispuesto a afrontar nuevos desafíos.</p>
+        <p>ofresco mas informacion personal en los enlaces de la pagina</p>
+    </main>
+    <footer
+        <p>Alumno TEC. en sistemas <a href="https://www.webcampus.uade.edu.ar/" target="_blank">UADE</a></p>
+        <p class="contacto">
+            Teléfono de contacto: 1121544368 <img src="img/whatsapp.png" alt="icono" class="icono">
+        </p>
+    </footer>
 </body>
-
 </html>
